--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
-site_name: "Documentation | Plug"
-site_author: plugwallet.ooo
-site_description: Plug is a browser crypto wallet extension that allows you to access your ICP, Cycles, and other tokens as well as log into IC apps with one click.
+site_name: "Documentation | DAB"
+site_author: dab.ooo
+site_description: All the data an IC app needs to make seamless experiences, accessible directly on the IC. Canister, NFT, Token, and Dapp registries/lists
 site_url: https://docs.plugwallet.ooo/
 copyright: '© 2021 Built by Fleek'
-repo_name: psychedelic/plug
-repo_url: https://github.com/psychedelic/plug
+repo_name: psychedelic/dab
+repo_url: https://github.com/psychedelic/dab
 theme:
   name: material
   custom_dir: overrides
@@ -23,17 +23,11 @@ markdown_extensions:
   - toc:
       permalink: true
 nav:
-  - Welcome to Plug 👋: index.md
+  - Welcome to DAB 👋: index.md
   - <b>Developer Guides</b> 🧰: "#"
   - Getting Started: getting-started/connect-to-plug/#browser-extension
   - Connect apps to Plug: getting-started/connect-to-plug/#requestconnectrequestconnectparams
   - Using the PlugAgent: getting-started/connect-to-plug/#plug-agent-agent
-  - Querying Balances: getting-started/connect-to-plug/#requestbalance
-  - Triggering Transfers: getting-started/connect-to-plug/#requesttransferrequesttransferparams
-  - Authentication Button: getting-started/plug-button.md
-  - <b>Custom Assets in Plug</b> 🎨: "#"
-  - Custom Tokens (EXT): getting-started/custom-tokens.md
-  - Non-fungible Tokens (NFTs): getting-started/nfts.md
   - <b>Build an App Examples</b> 💡: "#"
   - Buy me a Coffee: build-an-app-examples/build-app-buy-me-a-coffee.md
   - Plugged (E2E): build-an-app-examples/build-app-plugged.md
