--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: "Documentation | DAB"
 site_author: dab.ooo
-site_description: All the data an IC app needs to make seamless experiences, accessible directly on the IC. Canister, NFT, Token, and Dapp registries/lists
+site_description: All the data an IC app needs to make seamless experiences, accessible directly on the IC. Canister, NFT, Token, and Dapp registries & lists.
 site_url: https://docs.plugwallet.ooo/
 copyright: '© 2021 Built by Fleek'
 repo_name: psychedelic/dab
