--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,23 +23,21 @@ markdown_extensions:
   - toc:
       permalink: true
 nav:
-  - <b>Welcome to DAB</b> 👋: "#"
-  - Overview: index.md
+  - Welcome to DAB 👋: "#"
   - <b>DAB's NFT List</b> 🎨: "#"
   - Getting Started: nft-list/getting-started.md
-  - Setting up DAB-js: nft-list/getting-started/#md
-  - Fetching a User's NFTs: nft-list/getting-started/#md
-  - Triggering an NFT Transfer: nft-list/getting-started/#md
-  - Submit an NFT to the list: "https://dab-ooo.typeform.com/nft-list"
-  - Current NFT List: "https://github.com/Psychedelic/dab/"
-  - <b>Coming Soon - Early Submissions</b> 📣: "#"
-  - Token List: "https://dab-ooo.typeform.com/token-list"
-  - Canister List: "https://dab-ooo.typeform.com/canister-list"
-  - Dapp List: "https://dab-ooo.typeform.com/dapp-list"  
+  - Fetching a User's NFTs: nft-list/getting-started/#2-fetching-all-nfts-the-user-owns-getallusernfts
+  - Triggering an NFT Transfer: nft-list/getting-started/#3-triggering-a-transfer-for-an-nft-transfer
+  - <b>Coming Soon - Lists</b> 📣:
+    - Token List: "https://dab-ooo.typeform.com/token-list"
+    - Canister List: "https://dab-ooo.typeform.com/canister-list"
+    - Dapp List: "https://dab-ooo.typeform.com/dapp-list"  
   - <b>Developer Tools</b> 💡: "#"
   - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
   - Main DAB Repo: https://github.com/Psychedelic/DAB/
   - <b>Resources</b> 📚:
+    - NFT List Submissions: "https://dab-ooo.typeform.com/nft-list"
+    - Current NFT List: "https://github.com/Psychedelic/dab/"
     - The Internet Computer: "https://dfinity.org/faq"
     - Disclaimer: resources/disclaimer.md
     - Trademark: resources/trademark.md
