--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ nav:
   - Getting Started: nft-list/getting-started.md
   - Fetching a User's NFTs: nft-list/getting-started/#2-fetching-all-nfts-the-user-owns-getallusernfts
   - Triggering an NFT Transfer: nft-list/getting-started/#3-triggering-a-transfer-for-an-nft-transfer
-  - Current NFT List: "https://github.com/Psychedelic/dab/"
+  - Current NFT List: "https://github.com/Psychedelic/dab/blob/main/registries/nft/list.json"
   - Submit an NFT: "https://dab-ooo.typeform.com/nft-list"  
   - <b>Developer Tools</b> 💡: "#"
   - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
