--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
   - <b>DAB's NFT List</b> 🎨: "#"
   - Getting Started: nft-list/getting-started.md
   - Fetching a User's NFTs: nft-list/getting-started/#2-fetching-all-nfts-the-user-owns-getallusernfts
-  - Triggering an NFT Transfer: nft-list/getting-started/#3-triggering-a-transfer-for-an-nft-transfer
+  - Interacting with NFTs: nft-list/getting-started/https://docs.dab.ooo/nft-list/getting-started/#3-interacting-with-nfts-using-nftactor-getusertokens-transfer-details
   - Current NFT List: "https://github.com/Psychedelic/dab/blob/main/registries/nft/list.json"
   - Submit an NFT: "https://dab-ooo.typeform.com/nft-list"  
   - <b>Developer Tools</b> 💡: "#"
