--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: "Documentation | DAB"
 site_author: dab.ooo
 site_description: All the data an IC app needs to make seamless experiences, accessible directly on the IC. Canister, NFT, Token, and Dapp registries & lists.
-site_url: https://docs.plugwallet.ooo/
+site_url: https://docs.dab.ooo/
 copyright: '© 2021 Built by Fleek LLC'
 repo_name: psychedelic/dab
 repo_url: https://github.com/psychedelic/dab
