--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,12 +24,16 @@ markdown_extensions:
       permalink: true
 nav:
   - Welcome to DAB 👋: index.md
-  - <b>DAB's NFT List</b> 🎨: "#"
+  - <b>The NFT List</b> 🎨: "#"
   - Getting Started: nft-list/getting-started.md
   - Fetching a User's NFTs: nft-list/getting-started/#2-fetching-all-nfts-the-user-owns-getallusernfts
   - Interacting with NFTs: nft-list/getting-started/#3-interacting-with-nfts-using-nftactor-getusertokens-transfer-details
   - Current NFT List: "https://github.com/Psychedelic/dab/blob/main/registries/nft/list.json"
   - Submit an NFT: "https://dab-ooo.typeform.com/nft-list"  
+  - <b>The Canister List</b> 🛢️: "#"
+  - Getting Started: canister-list/getting-started.md
+  - Querying Metadata: canister-list/getting-started.md
+  - Submit a Canister: "https://dab-ooo.typeform.com/canister-list"    
   - <b>Developer Tools</b> 💡: "#"
   - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
   - Main DAB Repo: https://github.com/Psychedelic/DAB/
