--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
   - Getting Started: canister-list/getting-started.md
   - Single-canister Query: canister-list/getting-started/#2-check-a-single-canisters-metadata-in-the-registry-getcanisterinfo
   - Multi-canister Query: canister-list/getting-started/#3-check-multiple-canisters-metadata-in-the-registry-getmultiplecanisterinfo
+  - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/canister_registry/list.md"
   - Submit a Canister: "https://dab-ooo.typeform.com/canister-list"    
   - <b>Developer Tools</b> 💡: "#"
   - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
