--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,12 @@ nav:
   - Interacting with NFTs: nft-list/getting-started/#3-interacting-with-nfts-using-nftactor-getusertokens-transfer-details
   - Current NFT List: "https://github.com/Psychedelic/dab/blob/main/registries/nft/list.json"
   - Submit an NFT: "https://dab-ooo.typeform.com/nft-list"  
+  - <b>The Token List</b> 💠: "#"
+  - Getting Started: token-list/getting-started.md
+  - Fetching a User's Tokens: token-list/getting-started/#2-fetching-all-nfts-the-user-owns-getallusernfts
+  - Interacting with Tokens: token-list/getting-started/#3-interacting-with-nfts-using-nftactor-getusertokens-transfer-details
+  - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/token/list.json"
+  - Submit a Token: "https://dab-ooo.typeform.com/token-list"    
   - <b>The Canister List</b> 🛢️: "#"
   - Getting Started: canister-list/getting-started.md
   - Single-canister Query: canister-list/getting-started/#2-check-a-single-canisters-metadata-in-the-registry-getcanisterinfo
