--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,9 +43,9 @@ nav:
     - Multi-canister Query: canister-list/getting-started/#3-check-multiple-canisters-metadata-in-the-registry-getmultiplecanisterinfo
     - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/canister_registry/list.md"
     - Submit a Canister: "https://dab-ooo.typeform.com/canister-list"    
-  - Developer Tools 💡: "#"
-  - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
-  - Main DAB Repo: https://github.com/Psychedelic/DAB/
+  - Developer Tools 💡:
+    - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
+    - Main DAB Repo: https://github.com/Psychedelic/DAB/
   - Resources 📚:
     - The Internet Computer: "https://dfinity.org/faq"
     - Disclaimer: resources/disclaimer.md
