--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,13 @@ markdown_extensions:
       permalink: true
 nav:
   - Welcome to DAB 👋: index.md
-  - Why use DAB? 🤔: resources/why-dab.md
+  - <b>Overview</b> : "#"
+  - What is DAB? 🤔: resources/what-is-dab.md
+  - <b>Create Your Own Registry</b> : "#"
+  - Registry Standard 🧩: standard/getting-started.md
+  - Interacting With Custom Registries: standard/getting-started/#interacting-with-custom-registries
+  - Request Verification: ""
+  - <b>Verified Registries</b>: "#"
   - The NFT List 🎨:
     - Getting Started: nft-list/getting-started.md
     - Fetching a User's NFTs: nft-list/getting-started/#2-fetching-all-nfts-the-user-owns-getallusernfts
@@ -42,9 +48,9 @@ nav:
     - Multi-canister Query: canister-list/getting-started/#3-check-multiple-canisters-metadata-in-the-registry-getmultiplecanisterinfo
     - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/canister_registry/list.md"
     - Submit a Canister: "https://dab-ooo.typeform.com/canister-list"    
-  - Developer Tools 💡:
-    - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
-    - Main DAB Repo: https://github.com/Psychedelic/DAB/
+  - <b>Tools</b> 💡: "#"
+  - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
+  - Main DAB Repo: https://github.com/Psychedelic/DAB/
   - Resources 📚:
     - The Internet Computer: "https://dfinity.org/faq"
     - Disclaimer: resources/disclaimer.md
