--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,17 +35,20 @@ nav:
     - Getting Started: nft-list/getting-started.md
     - Fetching a User's NFTs: nft-list/getting-started/#2-fetching-all-nfts-the-user-owns-getallusernfts
     - Interacting with NFTs: nft-list/getting-started/#3-interacting-with-nfts-using-nftactor-getusertokens-transfer-details
+    - Deprecated Methods: nft-list/getting-started/#4-deprecated-methods
     - Current NFT List: "https://github.com/Psychedelic/dab/blob/main/registries/nft/list.json"
     - Submit an NFT: "https://dab-ooo.typeform.com/nft-list"  
   - The Token List 💠:
     - Getting Started: token-list/getting-started.md
     - Interacting with Tokens: token-list/getting-started/#2-interacting-with-tokens-gettokenactor-transfer-details
+    - Deprecated Methods: token-list/getting-started/#3-deprecated-methods
     - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/tokens/list.json"
     - Submit a Token: "https://dab-ooo.typeform.com/token-list"    
   - The Canister List 🛢️:
     - Getting Started: canister-list/getting-started.md
     - Single-canister Query: canister-list/getting-started/#2-check-a-single-canisters-metadata-in-the-registry-getcanisterinfo
     - Multi-canister Query: canister-list/getting-started/#3-check-multiple-canisters-metadata-in-the-registry-getmultiplecanisterinfo
+    - Deprecated Methods: canister-list/getting-started/#4-deprecated-methods
     - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/canister_registry/list.md"
     - Submit a Canister: "https://dab-ooo.typeform.com/canister-list"    
   - <b>Tools</b> 💡: "#"
