Code added & final touches

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,26 +29,26 @@ nav:
   - <b>Create Your Own Registry</b> : "#"
   - Registry Standard 🧩: standard/getting-started.md
   - Interacting With Custom Registries: standard/getting-started/#interacting-with-custom-registries
-  - Request Verification: ""
+  - Request Verification: "https://dab-ooo.typeform.com/to/m8qBZHWu"
   - <b>Verified Registries</b>: "#"
   - The NFT List 🎨:
     - Getting Started: nft-list/getting-started.md
     - Fetching a User's NFTs: nft-list/getting-started/#2-fetching-all-nfts-the-user-owns-getallusernfts
     - Interacting with NFTs: nft-list/getting-started/#3-interacting-with-nfts-using-nftactor-getusertokens-transfer-details
-    - Deprecated Methods: nft-list/getting-started/#4-deprecated-methods
+    - Registry Standard Methods: nft-list/getting-started/#4-using-dab-registry-standard-methods-name-get-add-remove
     - Current NFT List: "https://github.com/Psychedelic/dab/blob/main/registries/nft/list.json"
     - Submit an NFT: "https://dab-ooo.typeform.com/nft-list"  
   - The Token List 💠:
     - Getting Started: token-list/getting-started.md
     - Interacting with Tokens: token-list/getting-started/#2-interacting-with-tokens-gettokenactor-transfer-details
-    - Deprecated Methods: token-list/getting-started/#3-deprecated-methods
+    - Registry Standard Methods: token-list/getting-started/#3-using-dab-registry-standard-methods-name-get-add-remove
     - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/tokens/list.json"
     - Submit a Token: "https://dab-ooo.typeform.com/token-list"    
   - The Canister List 🛢️:
     - Getting Started: canister-list/getting-started.md
     - Single-canister Query: canister-list/getting-started/#2-check-a-single-canisters-metadata-in-the-registry-getcanisterinfo
     - Multi-canister Query: canister-list/getting-started/#3-check-multiple-canisters-metadata-in-the-registry-getmultiplecanisterinfo
-    - Deprecated Methods: canister-list/getting-started/#4-deprecated-methods
+    - Registry Standard Methods: canister-list/getting-started/#4-using-dab-registry-standard-methods-name-get-add-remove
     - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/canister_registry/list.md"
     - Submit a Canister: "https://dab-ooo.typeform.com/canister-list"    
   - <b>Tools</b> 💡: "#"
