--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,7 +50,13 @@ nav:
     - Multi-canister Query: canister-list/getting-started/#3-check-multiple-canisters-metadata-in-the-registry-getmultiplecanisterinfo
     - Registry Standard Methods: canister-list/getting-started/#4-using-dab-registry-standard-methods-name-get-add-remove
     - Current List: "https://github.com/Psychedelic/dab/blob/main/registries/canister_registry/list.md"
-    - Submit a Canister: "https://dab-ooo.typeform.com/canister-list"    
+    - Submit a Canister: "https://dab-ooo.typeform.com/canister-list"   
+  - The Address Book 📓:
+    - Getting Started: address-book/getting-started.md
+    - Interacting with Contacts: address-book/getting-started/#2-interacting-with-a-users-address-book-getaddressbookactor
+    - Fetching All Contacts: address-book/getting-started/#getaddresses-fetch-all-of-a-users-contacts   
+    - Adding a Contact: address-book/getting-started/#addaddress-add-a-new-contact-to-the-users-address-book
+    - Removing a Contact: address-book/getting-started/#removeaddress-remove-a-contact-from-the-address-book
   - <b>Tools</b> 💡: "#"
   - DAB-JS Library: https://github.com/Psychedelic/DAB-js/
   - Main DAB Repo: https://github.com/Psychedelic/DAB/
